[package]
name = "minecrust"
version = "0.1.0"
authors = ["Scotow <contact@scotow.com>", "Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteorder = "1.3.4"
futures = "0.3.4"
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.0"
anyhow = "*"
macro_derive = { path = "macro_derive" }

[dev-dependencies]
futures-await-test = "0.3.0"
smol = { path = "../smol" }

[workspace]
members = ["macro_derive"]
