[package]
name = "minecrust"
version = "0.1.0"
authors = ["Scotow <contact@scotow.com>", "Thomas Campistron <irevoire@hotmail.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
async-trait = "0.1.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.12.0"
anyhow = "*"
macro_derive = { path = "macro_derive" }
piper = "0.1.1"
futures-timer = "3.0.2"
bitvec = "0.17.4"
hematite-nbt = "0.4.1"

[dev-dependencies]
futures-await-test = "0.3.0"
smol = "0.1.2"

[workspace]
members = ["macro_derive"]
